# mocap_pose

./: .gitignore  .gitmodules  81-tplink.rules  CHANGELOG.rst  CMakeLists.txt  Dockerfile  Dockerfile.build_env  Dockerfile.coverity  Dockerfile.riscv64  Dockerfile.runtime  README.md  build.sh  coverity.yaml  entrypoint-coverity.sh  entrypoint.sh  entrypoint_runtime.sh  go.mod  go.sum  package.xml  ros-humble-px4-msgs_6.0.0-0~git20231005.d0a163b_amd64.deb  turbobob.json
.github/: dependabot.yml
.github/workflows/: build.yml  main.yaml  tii-mocap-pose-coverity.yaml  tii-mocap-pose-riscv64.yaml  tii-mocap-pose.yaml
cmd/mocap2/: client.go  main.go  main_test.go  metrics.go  protocol.go  qtmparameters.go  serversim.go
debian/: postinst  postinst.em  prerm  prerm.em
include/mocap_pose/: mocap_pose.hpp
launch/: mocap_pose.launch
packaging/: build_deps.sh  package.sh  rosdep.yaml
src/: mocap_pose.cpp  mocap_pose_node.cpp
test/: mocap_test.cpp
