<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_pose</name>
  <version>0.1.0</version>
  <description>Converts Qualisys Mocap pose into ROS2 / PX4 GPS message</description>
  <maintainer email="sergey.smirnov@unikie.com">Sergey Smirnov</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>geodesy</depend>
  <depend>px4_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclcpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
